@@ -1,3 +1,8 @@
+2010-07-31  Alan Mackenzie  <acm@muc.de>
+
+	* progmodes/cc-cmds.el (c-mask-paragraph): Fix bug #6688:
+	Auto-fill broken in C/C++ modes.
+
 2010-07-29  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* menu-bar.el (menu-bar-showhide-tool-bar-menu-customize-enable-left)
